# sword

./: .editorconfig  .release.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  justfile  rustfmt.toml
examples/: Cargo.toml  README.md
examples/basic-server/: Cargo.toml
examples/basic-server/config/: config.toml
examples/basic-server/src/: main.rs
examples/basic_web_server/: Cargo.toml  main.rs
examples/basic_web_server/src/: main.rs
examples/config/: config.toml
examples/config-file/: Cargo.toml
examples/config-file/config/: config.toml
examples/config-file/src/: main.rs
examples/config_file/: Cargo.toml
examples/config_file/src/: main.rs
examples/cookies/: Cargo.toml
examples/cookies/config/: config.toml
examples/cookies/src/: main.rs  middleware.rs
examples/data-validation/: Cargo.toml
examples/data-validation/src/: main.rs
examples/data_validation/: Cargo.toml  main.rs  schemas.rs
examples/data_validation/src/: main.rs
examples/dependency-injection/: Cargo.toml
examples/dependency-injection/config/: config.toml
examples/dependency-injection/src/: controller.rs  database.rs  main.rs  middleware.rs  service.rs
examples/dependency_injection/: Cargo.toml  controller.rs  logger.rs  main.rs
examples/dependency_injection/src/: controller.rs  logger.rs
examples/di/: Cargo.toml
examples/di/src/: database.rs  main.rs  repository.rs  service.rs
examples/garde-data-validation/: Cargo.toml
examples/garde-data-validation/config/: config.toml
examples/garde-data-validation/src/: extractors.rs  main.rs  schemas.rs
examples/graceful-shutdown/: Cargo.toml
examples/graceful-shutdown/config/: config.toml
examples/graceful-shutdown/src/: main.rs
examples/helmet/: Cargo.toml
examples/helmet/config/: config.toml
examples/helmet/src/: main.rs
examples/hot-reload/: Cargo.toml  README.md
examples/hot-reload/config/: config.toml
examples/hot-reload/src/: main.rs
examples/hot_reload/: Cargo.toml
examples/hot_reload/src/: main.rs
examples/middlewares/: Cargo.toml  main.rs  middlewares.rs
examples/middlewares/config/: config.toml
examples/middlewares/src/: main.rs  middlewares.rs
examples/multipart/: Cargo.toml
examples/multipart/config/: config.toml
examples/multipart/src/: main.rs
examples/non-static-controller/: Cargo.toml
examples/non-static-controller/config/: config.toml
examples/non-static-controller/src/: database.rs  main.rs
examples/shaku-di/: Cargo.toml
examples/shaku-di/src/: controller.rs  main.rs
examples/shared-state/: Cargo.toml
examples/shared-state/config/: config.toml
examples/shared-state/src/: main.rs  state.rs
examples/shared_state/: Cargo.toml  main.rs  state.rs
examples/shared_state/src/: main.rs  state.rs
examples/src/: basic_web_server.rs  data_validation.rs  di.rs  global_state.rs  middleware.rs  middleware_with_state.rs
examples/src/basic_web_server/: main.rs
examples/src/config_file/: main.rs
examples/src/data_validation/: main.rs
examples/src/dependency_injection/: controller.rs  database.rs  main.rs
examples/src/hot_reloading/: main.rs
examples/src/middlewares/: main.rs  middlewares.rs
examples/src/multipart/: http_logger.rs  main.rs
examples/src/shared_state/: main.rs  state.rs
examples/src/tower_middlewares/: cors.rs  http_logger.rs  main.rs
examples/tower-middlewares/: Cargo.toml
examples/tower-middlewares/config/: config.toml
examples/tower-middlewares/src/: cors.rs  main.rs
examples/tower_middlewares/: Cargo.toml
examples/tower_middlewares/src/: cors.rs  main.rs
examples/validator-data-validation/: Cargo.toml
examples/validator-data-validation/src/: main.rs
sword/: Cargo.toml
sword-macros/: Cargo.toml
sword-macros/src/: config.rs  controller.rs  controller_impl.rs  lib.rs  middleware.rs  router.rs  utils.rs
sword-macros/src/controller/: expand.rs  generation.rs  implementation.rs  middleware.rs  mod.rs  parsing.rs
sword-macros/src/controller/parsing/: attributes.rs  fields.rs  mod.rs
sword-macros/src/controller/routes/: expand.rs  generation.rs  parsing.rs
sword-macros/src/di/: generation.rs  mod.rs  parse.rs
sword-macros/src/di/injectable/: expand.rs  generation.rs
sword-macros/src/di/provider/: expand.rs  generation.rs
sword-macros/src/http/: utils.rs
sword-macros/src/http/controller/: expand.rs  fields.rs  routes.rs
sword-macros/src/http/middleware/: expand.rs  mod.rs
sword-macros/src/injectable/: expand.rs  generation.rs  parse.rs
sword-macros/src/middleware/: expand.rs  parse.rs
sword-macros/src/shared/: generation.rs  parsing.rs
sword-tests/: Cargo.toml
sword-tests/config/: config.toml
sword-tests/src/: application.rs  config.rs  controller.rs  di.rs  lib.rs  middleware.rs  multipart.rs  query.rs  state.rs  top_level_middleware.rs  utils.rs
sword-tests/src/application/: config.rs  di.rs  prefix.rs  state.rs  versioning.rs
sword-tests/src/middlewares/: built_in.rs  controller_level.rs  handler_level.rs  helmet.rs
sword-tests/src/request/: cookies.rs  multipart.rs  query.rs
sword/src/: application.rs  di.rs  extract.rs  lib.rs  middleware.rs  request.rs  validation.rs
sword/src/application/: config.rs  mod.rs  state.rs
sword/src/context/: cookies.rs  mod.rs  multipart.rs  request.rs
sword/src/core/: config.rs  di.rs  router.rs  state.rs  utils.rs
sword/src/core/application/: builder.rs  config.rs  mod.rs
sword/src/core/state/: extract.rs  internal.rs
sword/src/errors/: display.rs  formatting.rs  mappers.rs  mod.rs
sword/src/http/: context.rs  errors.rs  mod.rs  request.rs
sword/src/http/context/: cookies.rs  extract.rs  mod.rs  request.rs
sword/src/http/context/multipart/: mod.rs
sword/src/http/context/request/: mod.rs  validation.rs
sword/src/http/middleware/: built_in.rs  mod.rs
sword/src/layers/: cors.rs  logger.rs  mod.rs
sword/src/middlewares/: built_in.rs  mod.rs
sword/src/web/context/: cookies.rs  extract.rs  mod.rs  multipart.rs
sword/src/web/controller/: mod.rs
sword/src/web/middleware/: mod.rs
tests/: Cargo.toml
(+19 files in other folders)
