[package]
name = "examples"
version = "0.1.1"
edition = "2021"
publish = false

[[example]]
name = "basic_web_server"
path = "basic_web_server/main.rs"

[[example]]
name = "data_validation"
path = "data_validation/main.rs"

[[example]]
name = "shared_state"
path = "shared_state/main.rs"

[[example]]
name = "dependency_injection"
path = "dependency_injection/main.rs"

[[example]]
name = "middlewares"
path = "middlewares/main.rs"

[dependencies]
sword = { path = "../sword" }
sword-macros = { path = "../sword-macros" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
shaku = "0.6.2"
async-trait = "0.1.88"
