[package]
name = "examples"
version = "0.1.3"
edition = "2021"
publish = false

[[example]]
name = "basic_web_server"
path = "src/basic_web_server/main.rs"

[[example]]
name = "data_validation"
path = "src/data_validation/main.rs"

[[example]]
name = "shared_state"
path = "src/shared_state/main.rs"

[[example]]
name = "dependency_injection"
path = "src/dependency_injection/main.rs"

[[example]]
name = "middlewares"
path = "src/middlewares/main.rs"

[[example]]
name = "config-file"
path = "src/config_file/main.rs"

[[example]]
name = "tower_middlewares"
path = "src/tower_middlewares/main.rs"

[[example]]
name = "multipart"
path = "src/multipart/main.rs"

[[example]]
name = "hot_reloading"
path = "src/hot_reloading/main.rs"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "multipart"] }
tower-http = { version = "0.6.6", features = ["trace", "cors"] }

tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

sword = { path = "../sword" }
sword-macros = { path = "../sword-macros", features = ["hot_reloading"] }
tokio = { version = "^1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }
shaku = "0.6.2"
async-trait = "0.1.88"
subsecond = { git = "https://github.com/DioxusLabs/dioxus.git" }
dioxus-devtools = { git = "https://github.com/DioxusLabs/dioxus.git", features = [
    "serve",
] }
