[package]
name = "sword-macros"
version = "0.1.6"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "Axum based web framework prototype macros (sword crate)"
repository = "https://github.com/sword-framework/sword"
keywords = ["web", "framework", "axum", "http", "async"]
categories = ["web-programming::http-server", "web-programming"]
readme = "../README.md"
license-file = "../LICENSE"

[features]
default = []
hot-reload = []

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
regex = "1.11.1"
proc-macro-error = "1.0.4"
