[package]
name = "sword-macros"
version = "0.1.9"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "Macros for the Sword web framework"
repository = "https://github.com/sword-framework/sword"
homepage = "https://github.com/sword-framework/sword"
documentation = "https://docs.rs/sword-macros"
keywords = ["web", "framework", "axum", "http", "async"]
categories = ["web-programming::http-server", "web-programming"]
readme = "../README.md"
license-file = "../LICENSE"
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
regex-lite = "0.1.7"
proc-macro-error = "1.0.4"

[features]
default = []
hot-reload = []
