[package]
name = "sword-tests"
version = "0.1.1"
edition = "2024"

publish = false

[dependencies]
axum = "0.8.4"
axum-test = "17.3.0"

sword = { path = "../sword" }

tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }

validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.140"

shaku = "0.6.2"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3"
