[package]
name = "sword"
version = "0.1.8"
edition = "2024"
authors = ["Luciano Revillod <lrevillod2022@alu.uct.cl>"]
description = "A structured rust web framework built on top of Axum, providing clean routing, configuration, and middleware support"
repository = "https://github.com/sword-framework/sword"
homepage = "https://github.com/sword-framework/sword"
documentation = "https://docs.rs/sword"
keywords = ["sword", "web", "framework", "axum", "rest"]
categories = ["web, http-framework", "web-framework", "api"]
readme = "../README.md"
license-file = "../LICENSE"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
sword-macros = { workspace = true }
axum_responses = { workspace = true }

axum-helmet = { version = "0.2.0", optional = true }
http-body-util = "0.1.3"

toml = "0.9.0"
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = "0.7.1"
form_urlencoded = "^1.1.0"
serde_path_to_error = "0.1.17"
byte-unit = "5.1.6"

regex-lite = "0.1.7"
validator = { workspace = true, optional = true }

tower = "0.5.2"
tower-layer = "0.3.3"
tower-service = "0.3.3"
tower-http = { version = "0.6.6", features = ["limit", "timeout"] }
tower-cookies = { version = "0.11.0", optional = true }
thiserror = "2.0.12"

shaku = { version = "0.6.2", optional = true }
bytes = { version = "1.10.1", optional = true }
colored = "3.0.0"
inventory = "0.3.21"

subsecond = { version = "0.7.0-rc.1", optional = true }
dioxus-devtools = { version = "0.7.0-rc.1", features = [
    "serve",
], optional = true }

[features]
default = []

multipart = ["axum/multipart", "dep:bytes"]
cookies = ["dep:tower-cookies", "tower-cookies/signed", "tower-cookies/private"]
helmet = ["dep:axum-helmet"]
shaku-di = ["dep:shaku"]
validator = ["dep:validator"]
hot-reload = ["dep:subsecond", "dep:dioxus-devtools", "sword-macros/hot-reload"]
