[package]
name = "cookies"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cookies"
path = "src/main.rs"

[dependencies]
sword = { workspace = true, features = ["cookies"] }
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
