[package]
name = "dependency-injection"
version = "0.1.0"
edition = "2021"

[dependencies]
sword = { workspace = true, features = ["shaku-di"] }
shaku = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }
async-trait = { workspace = true }
