[package]
name = "tower_middlewares"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tower_middlewares"
path = "src/main.rs"

[dependencies]
sword = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
